Fixing z-indexing so it doesn’t end up on top of modal layers.

--- a/less/overrides/spinner.less
+++ b/less/overrides/spinner.less
@@ -99,7 +99,7 @@
   opacity: 0.9;
   filter: alpha(opacity=90);
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=90);
-  z-index: 9999;
+  z-index: 999;
   background: #fff;
   .spinner-msg {
     text-align: center;
